2010-02-22  Miguel de Dios  <miguel.dedios@artica.es>

	Merged from trunk:
	
	* include/functions_alerts.php: fix when try delete only the alerts from
	alert policies form. 

2010-02-20  Sancho Lerena <slerena@artica.es>

        * godmode/setup/setup.php: Fixed bug #2952636, thanks Junichi for the 
        patch.


2010-02-20  Sancho Lerena <slerena@artica.es>

	* include/gettext.php: Applied patch to solve problem in 64bit systems
	Thanks Junichi!.

2010-02-18  Raul Mateos <raulofpandora@gmail.com>
	* extensions/module_groups.php: Better description text. Changed font
        colour.

2010-02-18  Sancho Lerena <slerena@artica.es>

	* pandora_console/include/functions_reporting.php: Fixed a problem
	in enterprise PDF reports.

2010-02-12  Raúl Mateos <raulofpandora@gmail.com>

	* include/config_process.php: Fix date. Updated build.

	* Changelog: Small fixes.

2010-02-10  Sancho Lerena <slerena@artica.es>

	* include/help/es/help_alert_macros.php: Updated macro help.

	* include/config_process.php: Updated build. Better log management.

	* include/functions_fsgraph.php: removed a few blank lines.

	* godmode/setup/file_manager.php: Added support to delete files.

	* godmode/db/db_main.php: Added new metrics about DB usage. Added
	last time pandora_db.pl was running in the system.

	* godmode/db/db_info.php: Added graphic from db_main.

2010-02-01  Raúl Mateos <raulofpandora@gmail.com>

	* operation/agentes/estado_agente.php: Changed colour order for 
	module status.

	* include/help/en/help_agent_status.php: Improved help.

	* Changelog: Fix date.

2010-02-01  Sancho Lerena <slerena@artica.es>

	* include/javascript/pandora_visual_console.js: Thiner lines in maps.

	* include/functions_visual_map.php: Fixed several issues in visual maps
	(bad hierarchy status color, limited depth for recursion, get unknown
	for agents and modules, and line color is now always associated to
	parent status) and non-status elements like labels, graphs or progress